--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
     border-radius: 21px 21px
   }
 
-
-
-
-
     </style>
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" href= 'style.css' />
@@ -93,7 +89,10 @@
    <div class="container h-100">
       <div class="row h-100 align-items-center">
          <div class="col-12 col-md-12 text-center header-content">
+
             <img src="https://i.imgur.com/A0t1a3D.png" class="img-fluid logo" alt="logo">
+            <div class="pulse1"></div>
+            <div class="pulse2"></div>
             <h1>Let's make design fast and easy.</h1>
             <p>We offer a huge collection of simple, beautiful and ready to use blocks. All blocks can be downloaded free of charge from learnwd.com</p>
             <p>
