--- a/index.html
+++ b/index.html
@@ -10,62 +10,10 @@
     <title>Product example · Bootstrap</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/product/">
-
     <!-- Bootstrap core CSS -->
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="imageheader.css"/>
-    <style>
 
-      body{
-        background-color:black;
-      }
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      /*this is used inside to give the image padding*/
-
-
-  .jumbotron{
-
-
-
-    padding-top:40px;
-    padding-bottom:40px;
-    padding-right:40px;
-    padding-left:40px;
-
-  }
-
-  .jumbotroncolor{
-    background-color:#88B5F8;
-  }
-
-
-
-  .headingbox{
-    background-color:#457b9d;
-  }
-
-  .one{
-    border-radius: 21px 21px
-  }
-
-    </style>
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" href= 'style.css' />
   </head>
@@ -94,7 +42,7 @@
             <div class="pulse1"></div>
             <div class="pulse2"></div>
             <h1>Let's make design fast and easy.</h1>
-            <p>We offer a huge collection of simple, beautiful and ready to use blocks. All blocks can be downloaded free of charge from learnwd.com</p>
+            <p>A simple and creative website for you to showcase your projects.</p>
             <p>
                <a class="btn btn-primary rounded" href="https://www.learnwd.com/">Visit Github</a>
             </p>
